Configure security headers and environment-based CORS for production deployment